--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Hello world</h1>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Hello Coursera</title>
+</head>
+<body>
+<h5> DIANKA SLONYK</h5>
+</body>
+</html>
